# bitnp-ideas

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  commitlint.config.cjs  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.sisyphus/run-continuation/: ses_1314b8bd4ffeJIPK73K1xqHv57.json  ses_1314d45d2ffeLlEANbDLlFAYhx.json
apps/backend/: .gitignore  Dockerfile  alembic.ini  config.docker.yaml  config.yaml  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/bitnp_ideas/: main.py
apps/backend/bitnp_ideas/api/: router.py
apps/backend/bitnp_ideas/api/routes/: activity.py  api_keys.py  audit_logs.py  auth.py  external_links.py  gantt.py  health.py  idea_tags.py  ideas.py  projects.py  tasks.py  users.py
apps/backend/bitnp_ideas/core/: config.py
apps/backend/bitnp_ideas/db/: base.py  session.py
apps/backend/bitnp_ideas/models/: __init__.py  entities.py  enums.py
apps/backend/bitnp_ideas/schemas/: common.py
apps/backend/bitnp_ideas/security/: api_keys.py  oidc_adapter.py  rbac.py
apps/backend/bitnp_ideas/services/: backend.py  demo_data.py
apps/backend/tests/: conftest.py  test_api_endpoints.py  test_app.py  test_config.py  test_frontend_type_contract.py  test_openapi_contract.py
apps/frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: App.vue  env.d.ts  main.ts
apps/frontend/src/api/: client.ts
docs/: deployment.md  design v1.md
(+37 files in other folders)
