[project]
name = "bitnp-ideas-backend"
version = "0.1.0"
description = "BITNP IDEAS FastAPI backend"
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.2",
  "fastapi[standard]>=0.123.0",
  "httpx>=0.28.1",
  "pydantic-settings>=2.12.0",
  "psycopg[binary]>=3.3.2",
  "pyjwt[crypto]>=2.10.1",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.3",
  "sqlalchemy>=2.0.45",
  "cryptography>=49.0.0",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.22.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.13.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
